# wisper-flow-clone

./: .env  .gitignore  HEALTH_CHECK.sh  README.md  package-lock.json  package.json  test-app.sh  vite.config.js
public/: audio-processor.js
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: RecordingIndicator.jsx  TranscriptionDisplay.jsx  VoiceInput.jsx
src/hooks/: useAudioRecorder.js  useTranscription.js
src/services/: audioService.js  deepgramService.js  tauriMicrophone.js  transcriptionService.js
src/styles/: RecordingIndicator.css  TranscriptionDisplay.css  VoiceInput.css
