[package]
name = "wispr-flow"
version = "0.1.0"
description = "Voice to Text Desktop Application"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
